tests/baselines/reference/compoundExponentiationAssignmentLHSCanBeAssigned1.errors.txt
tests/cases/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts(11,8): error TS2531: Object is possibly 'null'.
tests/cases/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts(12,8): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts(18,8): error TS2531: Object is possibly 'null'.
tests/cases/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts(19,8): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts(25,8): error TS2531: Object is possibly 'null'.
tests/cases/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts(26,8): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/es7/exponentiationOperator/compoundExponentiationAssignmentLHSCanBeAssigned1.ts (6 errors) ====
    enum E { a, b, c }
    
    var a: any;
    var b: number;
    var c: E;
    
    var x1: any;
    x1 **= a;
    x1 **= b;
    x1 **= c;
    x1 **= null;
           ~~~~
!!! error TS2531: Object is possibly 'null'.
    x1 **= undefined;
           ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    
    var x2: number;
    x2 **= a;
    x2 **= b;
    x2 **= c;
    x2 **= null;
           ~~~~
!!! error TS2531: Object is possibly 'null'.
    x2 **= undefined;
           ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    
    var x3: E;
    x3 **= a;
    x3 **= b;
    x3 **= c;
    x3 **= null;
           ~~~~
!!! error TS2531: Object is possibly 'null'.
    x3 **= undefined;
           ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.